--- a/React/Dashboard/src/styles/Task.scss
+++ b/React/Dashboard/src/styles/Task.scss
@@ -27,3 +27,18 @@
         }
     }
 }
+
+@media (max-width: 768px) {
+    .task {
+        padding: 14px;
+
+        p {
+            font-size: 16px;
+        }
+
+        button {
+            padding: 10px;
+            font-size: 14px;
+        }
+    }
+}
